2006-03-26  Maciej Stachowiak  <mjs@apple.com>

        - completed acknowledgements (I think I got everyone who made a
          suggestion that was actually taken)
        - improved use of dfn/term
        - marked informative sections as such properly
        - added explanation of styling for definitions and def references
        
        * source/Window.xml:
        
        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-03-25  Anne van Kesteren  <annevk@opera.com>

        * source/Window.xml: changed the language, markup, reformatted and
        fixed the CDR section and made some small editorial changes

2006-03-25  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added Anne's text for the Embedding section
        
        * publish/Window.html: regenerated

2006-03-24  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added a new conformace class, "conforming Java implementation", and a placeholder Java appendix
        - replaced many "need a cross reference" ednotes with bibliography references
        - added remaining attribute and method descriptions from Ian Davis's draft
        - started converting more of the attribute descriptions to conformance requirements 
        - a bunch of reformatting and rewording
        - mentioned possibility of parentWindow property
        - tried to add <ednote>s for any obvious missing pieces and open issues.
        - started converting term definitions and references to <termdfn> and <term>.

        * publish/Window.html: Regenerated with my locally hacked ReSpec.

2006-03-19  Maciej Stachowiak  <mjs@apple.com>
        
        * source/Window.xml:
        - fixed a number of grammar and spelling problems I found while
        writing tests.
        
        * publish/Window.html: regenerated

2006-03-19  Maciej Stachowiak  <mjs@apple.com>
        
        * source/Window.xml:
        - added Ian Davis as editor