@@ -6,7 +6,7 @@
           regenerated.
           ******* WARNING ********
         --><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.7 2006-03-27 08:06:22 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>25 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
+<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.8 2006-03-27 08:37:08 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>25 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
         <a href="http://www.w3.org/"><acronym title="World Wide Web Consortium">W3C</acronym></a><sup>®</sup>
         (<a href="http://www.csail.mit.edu/"><acronym title="Massachusetts Institute of Technology">MIT</acronym></a>,
         <a href="http://www.ercim.org/"><acronym title="European Research Consortium for Informatics and Mathematics">ERCIM</acronym></a>,
@@ -484,26 +484,25 @@ interface DocumentWindow  : views::DocumentView {
     <div class="section"><h3 id="location">3.3. The <code>Location</code> Interface</h3>
       
 
-    <div class="ednote">Should all the instances of DOMString be core::DOMString?</div>
       <div class="boxed"><p><span class="idlTitle"></span></p><pre class="schema" title="">
 
 interface Location {
-    attribute DOMString href;
+    attribute dom::DOMString href;
 
     // pieces of the URI, per the generic URI syntax
-    attribute DOMString hash;
-    attribute DOMString host;
-    attribute DOMString hostname;
-    attribute DOMString pathname;
-    attribute DOMString port;
-    attribute DOMString protocol;
-    attribute DOMString search;
+    attribute dom::DOMString hash;
+    attribute dom::DOMString host;
+    attribute dom::DOMString hostname;
+    attribute dom::DOMString pathname;
+    attribute dom::DOMString port;
+    attribute dom::DOMString protocol;
+    attribute dom::DOMString search;
 
-    void assign(in DOMString url);
-    void replace(in DOMString url);
+    void assign(in dom::DOMString url);
+    void replace(in dom::DOMString url);
     void reload();
 
-    DOMString toString();
+    dom::DOMString toString();
 };</pre></div>
 
       <div class="section"><h4 id="location-attributes">3.3.1. Attributes</h4>
@@ -699,7 +698,7 @@ interface Window {
     // name attribute of referencing frame/iframe/object, or name passed to
     // window.open, does it make sense to spec this without being html-specific
     // or defining open?
-    attribute DOMString name;
+    attribute dom::DOMString name;
 
     // global object of containing document
     readonly attribute Window parent;
@@ -709,7 +708,7 @@ interface Window {
 
     // referencing &lt;html:frame&gt;, &lt;html:iframe&gt;, &lt;html:object&gt;, &lt;svg:foreignObject&gt;,
     // &lt;svg:animation&gt; or other embedding point, or null if none
-    readonly attribute core::Element frameElement;
+    readonly attribute dom::Element frameElement;
 };</pre></div>
 
       <div class="ednote">This needs fixing to clearly state the conformance requirements.</div>
@@ -740,9 +739,9 @@ interface Window {
       
       <div class="boxed"><p><span class="idlTitle"></span></p><pre class="schema" title="">
 
-// must be on an object that also implements core::Element
+// must be on an object that also implements dom::Element
 interface EmbeddingElement {
-    readonly attribute core::Document contentDocument;
+    readonly attribute dom::Document contentDocument;
     readonly attribute Window contentWindow;
 };</pre></div>
 
@@ -845,7 +844,7 @@ interface TimerListener {
     </p>
 
     <p>
-      Cameron McCormack, Jim Ley and Boris Zbarsky.
+      Björn Höhrmann, Jim Ley, Cameron McCormack and Boris Zbarsky.
     </p>
 
     <p>
