@@ -506,28 +506,27 @@ interface DocumentWindow  : views::DocumentView {
     <section xml:id='location'>
       <title>The <code>Location</code> Interface</title>
 
-    <ednote>Should all the instances of DOMString be core::DOMString?</ednote>
       <schema>
       <title></title>
       <idl>
 
 interface Location {
-    attribute DOMString href;
+    attribute dom::DOMString href;
 
     // pieces of the URI, per the generic URI syntax
-    attribute DOMString hash;
-    attribute DOMString host;
-    attribute DOMString hostname;
-    attribute DOMString pathname;
-    attribute DOMString port;
-    attribute DOMString protocol;
-    attribute DOMString search;
+    attribute dom::DOMString hash;
+    attribute dom::DOMString host;
+    attribute dom::DOMString hostname;
+    attribute dom::DOMString pathname;
+    attribute dom::DOMString port;
+    attribute dom::DOMString protocol;
+    attribute dom::DOMString search;
 
-    void assign(in DOMString url);
-    void replace(in DOMString url);
+    void assign(in dom::DOMString url);
+    void replace(in dom::DOMString url);
     void reload();
 
-    DOMString toString();
+    dom::DOMString toString();
 };</idl></schema>
 
       <section xml:id="location-attributes">
@@ -726,7 +725,7 @@ interface Window {
     // name attribute of referencing frame/iframe/object, or name passed to
     // window.open, does it make sense to spec this without being html-specific
     // or defining open?
-    attribute DOMString name;
+    attribute dom::DOMString name;
 
     // global object of containing document
     readonly attribute Window parent;
@@ -736,7 +735,7 @@ interface Window {
 
     // referencing <html:frame>, <html:iframe>, <html:object>, <svg:foreignObject>,
     // <svg:animation> or other embedding point, or null if none
-    readonly attribute core::Element frameElement;
+    readonly attribute dom::Element frameElement;
 };]]></idl></schema>
 
       <ednote>This needs fixing to clearly state the conformance requirements.</ednote>
@@ -769,9 +768,9 @@ interface Window {
       <title></title>
       <idl>
 
-// must be on an object that also implements core::Element
+// must be on an object that also implements dom::Element
 interface EmbeddingElement {
-    readonly attribute core::Document contentDocument;
+    readonly attribute dom::Document contentDocument;
     readonly attribute Window contentWindow;
 };</idl></schema>
 
@@ -878,7 +877,7 @@ interface TimerListener {
     </p>
 
     <p>
-      Cameron McCormack, Jim Ley and Boris Zbarsky.
+      Bj&#246;rn H&#246;hrmann, Jim Ley, Cameron McCormack and Boris Zbarsky.
     </p>
 
     <p>
