@@ -1,3 +1,11 @@
+2006-03-27  Maciej Stachowiak  <mjs@apple.com>
+
+        - replaced refereces to fictitious core:: IDL module with dom::
+        - properly qualified DOMStrings as dom::DOMString
+
+        * publish/Window.html:
+        * source/Window.xml:
+
 2006-03-26  Maciej Stachowiak  <mjs@apple.com>
 
         - completed acknowledgements (I think I got everyone who made a
